samples/_failures_safe/1761272455_3d89f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98f3cb5a.c: In function ‘main’:
./samples/SAFE/__tmp_98f3cb5a.c:151:17: error: expected declaration or statement at end of input
  151 |                 }
      |                 ^
./samples/SAFE/__tmp_98f3cb5a.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98f3cb5a.c:151:17: error: expected declaration or statement at end of input
